--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Quantos dias faltam <spam> </spam>?</h1>
+    <h1>Quantos dias faltam <spam>?</spam></h1>
     <p id="dias_restantes"></p>
 </body>
 </html>
