--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <h1>Quantos dias faltam <spam>?</spam></h1>
+    <h1>Quantos dias faltam para o meu aniversario <spam>?</spam></h1>
     <p id="dias_restantes"></p>
 </body>
 </html>
