--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Quantos dias faltam para o meu aniversario <span>?</span></h1>
-    <p id="dias_restantes"></p>
+    <p id="dias_restantes"> Abrobrinha</p>
 </body>
 </html>
